Moved tool installation to ToolsController